--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(stream CXX)
+project(stream Fortran C CXX)
 
-include_directories(stream ${PROJECT_SOURCE_DIR}/include/ /usr/include/mpich)
-add_executable(stream
-        ${PROJECT_SOURCE_DIR}/src/main.cpp
-        ${PROJECT_SOURCE_DIR}/src/drivers.cpp)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/nek5000)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/openmc)
