Replace artifacts w/ GIT_STRATEGY in .gitlab-ci.yml
The artifacts method uploads to the server, which we don't want.
The GIT_STRATEGY method simply avoids clobbering the working
directory, which is what we want

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,20 +6,20 @@ stages:
 config:all:
   stage: config
   variables:
+    GIT_STRATEGY: clone
     CC: mpicc
     CXX: mpicxx
     FC: mpif90
   script:
     - cd src/nek5000/examples/eddy_uv
     - cmake -DCASENAME=eddy_uv ../../../..
-  artifacts:
-    paths:
-      - src/nek5000/examples/eddy_uv
 
 build:libopenmc:
   stage: build:modules
   dependencies:
     - config:all
+  variables:
+    GIT_STRATEGY: none
   script:
     - cd src/nek5000/examples/eddy_uv
     - make -j -l4 libopenmc
@@ -28,6 +28,8 @@ build:libnek5000:
   stage: build:modules
   dependencies:
     - config:all
+  variables:
+    GIT_STRATEGY: none
   script:
     - cd src/nek5000/examples/eddy_uv
     - make -j -l4 libnek5000
@@ -37,6 +39,8 @@ build:stream:
   dependencies:
     - build:libopenmc
     - build:libnek5000
+  variables:
+    GIT_STRATEGY: none
   script:
     - cd src/nek5000/examples/eddy_uv
     - make -j -l4 stream
