--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,21 +4,21 @@ stages:
 
 download:cross_sections:
   stage: download
+  variables:
+    GIT_STRATEGY: clone
   script:
-    - if [[ ! -e $HOME/nndc_hdf5/cross_sections.xml ]]; then
-        wget https://anl.box.com/shared/static/a6sw2cep34wlz6b9i9jwiotaqoayxcxt.xz -O - | tar -C $HOME -xvJ;
-      fi
+    - wget https://anl.box.com/shared/static/a6sw2cep34wlz6b9i9jwiotaqoayxcxt.xz -O - | tar -C $CI_PROJECT_DIR -xvJ
 
 test:openmc_api:
   stage: test
   dependencies:
     - download:cross_sections
   variables:
-    GIT_STRATEGY: clone
+    GIT_STRATEGY: none
     CC: mpicc
     CXX: mpicxx
     FC: mpif90
-    OPENMC_CROSS_SECTIONS: $HOME/nndc_hdf5/cross_sections.xml
+    OPENMC_CROSS_SECTIONS: $CI_PROJECT_DIR/nndc_hdf5/cross_sections.xml
   script:
     - cd tests/openmc_api
     - cmake -DCASENAME=ethier ../../
