--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,3 +25,16 @@ test:openmc_api:
     - cmake -DCASENAME=ethier ../../
     - make -j -l2 test_openmc_api
     - mpirun -np 2 ./test_openmc_api
+
+test:nek5000_api:
+  stage: test
+  variables:
+    GIT_STRATEGY: none
+    CC: mpicc
+    CXX: mpicxx
+    FC: mpif90
+  script:
+    - cd tests/nek5000_api
+    - cmake -DCASENAME=ethier ../../
+    - make -j -l2 test_nek5000_api
+    - mpirun -np 8 ./test_nek5000_api
