WIP: Setting up comm splits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,6 @@ target_link_libraries(test_openmc_api PUBLIC libstream)
 
 add_executable(test_nek5000_api ${CMAKE_CURRENT_LIST_DIR}/tests/nek5000_api/main.cpp)
 target_link_libraries(test_nek5000_api PUBLIC libstream)
+
+add_executable(test_coupled_driver ${CMAKE_CURRENT_LIST_DIR}/tests/coupled_driver/main.cpp)
+target_link_libraries(test_coupled_driver PUBLIC libstream)
