Moved comm_split_demo to its own directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,4 +43,4 @@ target_link_libraries(test_openmc_api PUBLIC libstream)
 add_executable(test_nek5000_api ${CMAKE_CURRENT_LIST_DIR}/tests/nek5000_api/main.cpp)
 target_link_libraries(test_nek5000_api PUBLIC libstream)
 
-add_executable(test_coupled_driver ${CMAKE_CURRENT_LIST_DIR}/tests/coupled_driver/main.cpp)
+add_executable(comm_split_demo ${CMAKE_CURRENT_LIST_DIR}/tests/comm_split_demo/main.cpp)
