--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,6 @@ add_executable(test_nek5000_api ${CMAKE_CURRENT_LIST_DIR}/tests/nek5000_api/main
 target_link_libraries(test_nek5000_api PUBLIC libstream)
 
 add_executable(comm_split_demo ${CMAKE_CURRENT_LIST_DIR}/tests/comm_split_demo/main.cpp)
+
+add_executable(test_coupled_driver ${CMAKE_CURRENT_LIST_DIR}/tests/coupled_driver/main.cpp)
+target_link_libraries(test_coupled_driver PUBLIC libstream)
