--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test:openmc_api:
   script:
     - cd tests/openmc_api
     - cmake -DCASENAME=ethier ../../
-    - make -j -l2 test_openmc_api
+    - make -j -l4 test_openmc_api
     - mpirun -np 2 ./test_openmc_api
 
 test:nek5000_api:
@@ -36,5 +36,18 @@ test:nek5000_api:
   script:
     - cd tests/nek5000_api
     - cmake -DCASENAME=ethier ../../
-    - make -j -l2 test_nek5000_api
+    - make -j -l4 test_nek5000_api
     - mpirun -np 8 ./test_nek5000_api
+
+test:coupled_driver:
+  stage: test
+  variables:
+    GIT_STRATEGY: none
+    CC: mpicc
+    CXX: mpicxx
+    FC: mpif90
+  script:
+    - cd tests/coupled_driver
+    - cmake -DCASENAME=ethier ../../
+    - make -j -l4 test_coupled_driver
+    - mpirun -np 8 ./test_coupled_driver
