--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,16 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/nek5000)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/openmc)
 
 # Target for STREAM library
-add_library(libstream ${CMAKE_CURRENT_LIST_DIR}/src/drivers.cpp src/message_passing.cpp)
+set_source_files_properties(
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_parallel.f90
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_geom.f90
+    PROPERTIES Fortran_FORMAT FIXED)
+add_library(libstream
+    ${CMAKE_CURRENT_LIST_DIR}/src/drivers.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/message_passing.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface.f90
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_parallel.f90
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_geom.f90)
 set_target_properties(libstream PROPERTIES OUTPUT_NAME stream)
 target_link_libraries(libstream PUBLIC libnek5000 libopenmc)
 
