--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,6 @@ FortranCInterface_HEADER(${CMAKE_BINARY_DIR}/nek_mangling.h
     SYMBOL_NAMESPACE C2F_
     SYMBOLS
     nek_init
-    nek_init_step
-    nek_step
-    nek_finalize_step
     nek_end
     nek_solve)
 
@@ -21,6 +18,7 @@ include_directories(
     ${CMAKE_CURRENT_LIST_DIR}/src/openmc/include
     ${CMAKE_CURRENT_LIST_DIR}/src/nek5000/core
     ${CMAKE_CURRENT_LIST_DIR}/src/nek5000/3rd_party/gslib/gslib-1.0.1/src
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek5000/nek5000_interface
     ${CMAKE_BINARY_DIR})
 
 # For building libnek5000 and libopenmc
@@ -31,11 +29,13 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/openmc)
 set_source_files_properties(
     ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_parallel.F90
     ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_geom.F90
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_interface_fixedform.F90
     PROPERTIES Fortran_FORMAT FIXED)
 add_library(libstream
     ${CMAKE_CURRENT_LIST_DIR}/src/drivers.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/message_passing.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_interface.F90
+    ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_interface_fixedform.F90
     ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_parallel.F90
     ${CMAKE_CURRENT_LIST_DIR}/src/nek_interface/nek_geom.F90)
 set_target_properties(libstream PROPERTIES OUTPUT_NAME stream)
