Update comments in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.1)
 project(stream Fortran C CXX)
 
-# Produces a C header file (name_mangling.h) to declare Nek5000's Fortran routines
+# =============================================================================
+# Discover name-mangling for routines in libnek5000
+# =============================================================================
 include(FortranCInterface)
 FortranCInterface_VERIFY()
 FortranCInterface_HEADER(${CMAKE_BINARY_DIR}/nek_mangling.h
@@ -12,7 +14,9 @@ FortranCInterface_HEADER(${CMAKE_BINARY_DIR}/nek_mangling.h
     nek_end
     nek_solve)
 
+# =============================================================================
 # Headers for all targets
+# =============================================================================
 include_directories(
     ${CMAKE_CURRENT_LIST_DIR}/include
     ${CMAKE_CURRENT_LIST_DIR}/src/openmc/include
@@ -21,13 +25,17 @@ include_directories(
     ${CMAKE_CURRENT_LIST_DIR}/src/nek5000_interface
     ${CMAKE_BINARY_DIR})
 
-# For building libnek5000 and libopenmc
+# =============================================================================
+# Recursively build libnek5000 and libopenmc
+# =============================================================================
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/nek5000)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/openmc)
 
-# Target for STREAM library
-
-# Use preprocessor and 8-byte reals
+# =============================================================================
+# Build libstream
+# =============================================================================
+# Discover and set necessary flags for building fixed-format Fortran components
+# of libstream.
 if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   set(FIXEDFORMAT_FLAGS "-fdefault-real-8 -fdefault-double-8 -cpp")
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL PGI)
@@ -46,6 +54,7 @@ set(FIXEDFORMAT_SOURCES
 set_source_files_properties(${FIXEDFORMAT_SOURCES} PROPERTIES Fortran_FORMAT FIXED)
 set_source_files_properties(${FIXEDFORMAT_SOURCES} PROPERTIES COMPILE_FLAGS ${FIXEDFORMAT_FLAGS})
 
+# Build all compoments of libstream
 add_library(libstream
     ${CMAKE_CURRENT_LIST_DIR}/src/drivers.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/message_passing.cpp
@@ -56,11 +65,15 @@ add_library(libstream
 set_target_properties(libstream PROPERTIES OUTPUT_NAME stream)
 target_link_libraries(libstream PUBLIC libnek5000 libopenmc)
 
-# Target for STREAM executable
+# =============================================================================
+# Build STREAM driver
+# =============================================================================
 add_executable(stream ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp)
 target_link_libraries(stream PUBLIC libstream)
 
-# For building tests
+# =============================================================================
+# Build STREAM tests and demos
+# =============================================================================
 add_executable(test_openmc_api ${CMAKE_CURRENT_LIST_DIR}/tests/api_tests/test_openmc_api.cpp)
 target_link_libraries(test_openmc_api PUBLIC libstream)
 
