Added targets to build reatore2, rea2torea (Nek mesh-conversion tools)

--- a/src/nek5000/tools/CMakeLists.txt
+++ b/src/nek5000/tools/CMakeLists.txt
@@ -61,3 +61,4 @@ endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/genbox/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/genmap/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/reatore2/CMakeLists.txt)
